fix: unmount video element when there is no video track or participant is invisible (#1096)
Fixes a regression introduced in #1094.

`display: none` caused an unexpected side-effect where the dimensions of
the tracked video element are reported as `0x0`.
This case wasn't properly handled and led to a situation where the SFU
was assigning the lowest video track quality, although this should be
considered as "unsubscribing" from the participant's video as there
isn't enough screen space where the video track can be played.

Now, instead of visually hiding the video element when there is nothing
to be played, or the participant is invisible, we are completely
removing it from the DOM. We do the same for the audio elements as well.

### Implementation notes
We are now replacing the previously introduced
`str-video__video--no-video` class with `str-video__video--not-playing`
that doesn't have any rules attached to it. We expect this to be the
main extension point for our integrators.

---------

--- a/packages/styling/src/Video/Video-layout.scss
+++ b/packages/styling/src/Video/Video-layout.scss
@@ -12,8 +12,4 @@
   &--mirror {
     transform: scaleX(-1);
   }
-
-  &--no-video {
-    display: none;
-  }
 }
